--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ tr:nth-child(odd) {
         <td>7669</td>
         <td>0.05</td>
         <td>52.89</td>
-        <td> Borriss 2018</td>
+        <td>Wu 2021</td>
         <td>https://doi.org/10.1093/bib/bbaa013</td>
         <td>C</td>
         <td>1</td>
@@ -592,7 +592,7 @@ tr:nth-child(odd) {
         <td>6298</td>
         <td>0.08</td>
         <td>46.65</td>
-        <td> Brito 2018</td>
+        <td>Wu 2021</td>
         <td>https://doi.org/10.1093/bib/bbaa013</td>
         <td>C</td>
         <td>1</td>
@@ -612,7 +612,7 @@ tr:nth-child(odd) {
         <td>4416</td>
         <td>0.16</td>
         <td>33.97</td>
-        <td> Wu 2021</td>
+        <td>Wu 2021</td>
         <td>https://doi.org/10.1093/bib/bbaa013</td>
         <td>C</td>
         <td>1</td>
@@ -632,7 +632,7 @@ tr:nth-child(odd) {
         <td>1000</td>
         <td>0.40</td>
         <td>27.78</td>
-        <td> Wu 2021</td>
+        <td>Borriss 2018</td>
         <td> https://doi.org/10.1111/1751-7915.13043</td>
         <td>C</td>
         <td>1</td>
@@ -652,7 +652,7 @@ tr:nth-child(odd) {
         <td>4334</td>
         <td>0.18</td>
         <td>103.19</td>
-        <td> Wu 2021</td>
+        <td>Brito 2018</td>
         <td>https://doi.org/10.1093/gbe/evx270</td>
         <td>C</td>
         <td>1</td>
@@ -1092,7 +1092,7 @@ tr:nth-child(odd) {
         <td>-</td>
         <td>0.01</td>
         <td>-</td>
-        <td>Collingro 2011</td>
+        <td>Köstlbacher 2021</td>
         <td>https://doi.org/10.1038/s41467-021-24294-3</td>
         <td>C</td>
         <td>1</td>
@@ -1112,7 +1112,7 @@ tr:nth-child(odd) {
         <td>4096</td>
         <td>0.10</td>
         <td>215.58</td>
-        <td>Köstlbacher 2021</td>
+        <td>Collingro 2011</td>
         <td>https://doi.org/10.1093/molbev/msr161</td>
         <td>C</td>
         <td>1</td>
@@ -1232,7 +1232,7 @@ tr:nth-child(odd) {
         <td>2968</td>
         <td>0.29</td>
         <td>6.58</td>
-        <td>Knetsch 2017 </td>
+        <td>Norsigian 2022</td>
         <td>https://doi.org/10.1073/pnas.2119396119</td>
         <td>C</td>
         <td>1</td>
@@ -1252,7 +1252,7 @@ tr:nth-child(odd) {
         <td>-</td>
         <td>0.54</td>
         <td>-</td>
-        <td>Norsigian 2022 </td>
+        <td>Knetsch 2017</td>
         <td>https://doi.org/10.1128/JCM.01384-17</td>
         <td>C</td>
         <td>1</td>
@@ -2692,7 +2692,7 @@ tr:nth-child(odd) {
         <td>16600</td>
         <td>0.03</td>
         <td>244.12</td>
-        <td> Xu 2016</td>
+        <td>Lata 2022</td>
         <td>https://doi.org/10.1016/j.micpath.2021.105347</td>
         <td>C</td>
         <td>1</td>
@@ -2712,7 +2712,7 @@ tr:nth-child(odd) {
         <td>-</td>
         <td>0.02</td>
         <td>-</td>
-        <td> Lata 2022</td>
+        <td>Xu 2016</td>
         <td>https://doi.org/10.1038/srep20020</td>
         <td>C</td>
         <td>1</td>
@@ -3174,6 +3174,26 @@ tr:nth-child(odd) {
         <td>194.28</td>
         <td> Bannantine 2020</td>
         <td>https://doi.org/10.3389/fmicb.2020.01701</td>
+        <td>C</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>0</td>
+    </tr>
+      <tr>
+        <td>Microcystis</td>
+        <td>a2dd89131ca5d133601706bade15f8a3</td>
+        <td><a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=1125"</a>1125</td>
+        <td>23</td>
+        <td>genus</td>
+        <td>22009</td>
+        <td>1660</td>
+        <td>8668</td>
+        <td>11681</td>
+        <td>0.08</td>
+        <td>507.87</td>
+        <td>Cao 2022</td>
+        <td>https://doi.org/10.1016/j.hal.2022.102186</td>
         <td>C</td>
         <td>1</td>
         <td>1</td>
