--- a/index.html
+++ b/index.html
@@ -3021,6 +3021,26 @@ tr:nth-child(odd) {
         <td>0</td>
     </tr>
     <tr>
+        <td>Microcystis</td>
+        <td>a2dd89131ca5d133601706bade15f8a3</td>
+        <td><a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=1125"</a>1125</td>
+        <td>23</td>
+        <td>genus</td>
+        <td>22009</td>
+        <td>1660</td>
+        <td>8668</td>
+        <td>11681</td>
+        <td>0.08</td>
+        <td>507.87</td>
+        <td>Cao 2022</td>
+        <td>https://doi.org/10.1016/j.hal.2022.102186</td>
+        <td>C</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>0</td>
+    </tr>
+    <tr>
         <td>Moraxella bovoculi</td>
         <td>4d2edc9607415ce3990006e9f370f935</td>
         <td><a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=386891"</a>386891</td>
@@ -3134,26 +3154,6 @@ tr:nth-child(odd) {
         <td>194.28</td>
         <td> Bannantine 2020</td>
         <td>https://doi.org/10.3389/fmicb.2020.01701</td>
-        <td>C</td>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
-        <td>0</td>
-    </tr>
-      <tr>
-        <td>Microcystis</td>
-        <td>a2dd89131ca5d133601706bade15f8a3</td>
-        <td><a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=1125"</a>1125</td>
-        <td>23</td>
-        <td>genus</td>
-        <td>22009</td>
-        <td>1660</td>
-        <td>8668</td>
-        <td>11681</td>
-        <td>0.08</td>
-        <td>507.87</td>
-        <td>Cao 2022</td>
-        <td>https://doi.org/10.1016/j.hal.2022.102186</td>
         <td>C</td>
         <td>1</td>
         <td>1</td>
@@ -3894,6 +3894,26 @@ tr:nth-child(odd) {
         <td>586.11</td>
         <td> Lassalle 2017</td>
         <td>https://doi.org/10.1093/gbe/evx255</td>
+        <td>C</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>Rhizobiales (symbiotic)</td>
+        <td>0dfa6cc96251960bf9b7fc32dad4686b</td>
+        <td>multiple</td>
+        <td>12</td>
+        <td>phenotype</td>
+        <td>37364</td>
+        <td>700</td>
+        <td>15394</td>
+        <td>21970</td>
+        <td>0.02</td>
+        <td>1830.83</td>
+        <td> Rosselli 2021</td>
+        <td>https://doi.org/10.3390/microorganisms9020407</td>
         <td>C</td>
         <td>1</td>
         <td>1</td>
@@ -4718,26 +4738,6 @@ tr:nth-child(odd) {
         <td>1</td>
         <td>1</td>
         <td>0</td>
-        <td>0</td>
-    </tr>
-    <tr>
-        <td>symbiotic rhizobiales</td>
-        <td>0dfa6cc96251960bf9b7fc32dad4686b</td>
-        <td>multiple</td>
-        <td>12</td>
-        <td>phenotype</td>
-        <td>37364</td>
-        <td>700</td>
-        <td>15394</td>
-        <td>21970</td>
-        <td>0.02</td>
-        <td>1830.83</td>
-        <td> Rosselli 2021</td>
-        <td>https://doi.org/10.3390/microorganisms9020407</td>
-        <td>C</td>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
         <td>0</td>
     </tr>
     <tr>
