--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@ tr:nth-child(odd) {
   background-color: #f0eeee;
 }
 
+  table td:nth-child(12) {
+  white-space: nowrap;
+}
+
   tr:hover {
   background-color: #f7afaf;
     }
@@ -132,7 +136,7 @@ tr:nth-child(odd) {
         <td>1185</td>
         <td></td>
         <td>131.67</td>
-        <td> Zhang 2018</td>
+        <td>Zhang 2018</td>
         <td>https://doi.org/10.3389/fmicb.2018.01255</td>
         <td>C</td>
         <td>1</td>
