--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@ tr:nth-child(odd) {
   table td:nth-child(12) {
   white-space: nowrap;
 }
-
+ table td:nth-child(13) {
+  white-space: nowrap;
+}
       
     </style>
   </head>
